--- a/learning_logs/templates/learning_logs/index.html
+++ b/learning_logs/templates/learning_logs/index.html
@@ -7,10 +7,12 @@
 {% endblock %}
 
 {% block content %}
-  <h2>
-    <a href="{% url 'users:register' %}">Register an account</a> to make
-     your own Learning Log, and list the topics you're learning about.
-  </h2>
+  {% if not user.is_authenticated %}
+    <h2>
+      <a href="{% url 'users:register' %}">Register an account</a> to make
+        your own Learning Log, and list the topics you're learning about.
+    </h2>
+  {% endif %}
   <h2>
     Whenever you learn something new about a topic, make an entry 
     summarizing what you've learned.
